--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,50 +1,45 @@
 <nav class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <!-- Brand/Logo -->
             <i class="bi-back"></i>
-            <span>Topic</span>
         </a>
 
-        <div class="d-lg-none ms-auto me-4">
-            <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
-        </div>
-
+        <!-- Toggle Button for Mobile -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
 
+        <!-- Navbar Links -->
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-lg-5 me-lg-auto">
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_1">Home</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_2">Browse Topics</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_3">How it works</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_4">FAQs</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_5">Contact</a>
-                </li>
-
+                <!-- Dropdown Menu -->
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">Pages</a>
-
-                    <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
-                        <li><a class="dropdown-item" href="topics-listing.html">Topics Listing</a></li>
-                        <li><a class="dropdown-item" href="contact.html">Contact Form</a></li>
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Bibliotheque
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <!-- Create Quiz Link -->
+                         <li>
+                            <a class="dropdown-item" href="{{ path('app_quiz_new') }}">
+                                Browse Books
+                            </a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="{{ path('app_quiz_new') }}">
+                                Create Quiz
+                            </a>
+                        </li>
+                        <!-- Create Book Link -->
+                        <li>
+                            <a class="dropdown-item" href="{{ path('app_livre_new') }}">
+                                Create Book
+                            </a>
+                        </li>
                     </ul>
                 </li>
             </ul>
 
+            <!-- User Icon (Optional) -->
             <div class="d-none d-lg-block">
                 <a href="#top" class="navbar-icon bi-person smoothscroll"></a>
             </div>
